--- a/CloudEnjoy/CloudEnjoy/Modules/Workbench/Workbench/LSWorkbenchViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Workbench/Workbench/LSWorkbenchViewController.xib
@@ -226,16 +226,16 @@
                                 <constraint firstItem="ID1-32-KCc" firstAttribute="leading" secondItem="3Vk-Cy-F9E" secondAttribute="trailing" id="sRr-xU-Uqb"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                     <real key="value" value="5"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                <userDefinedRuntimeAttribute type="color" keyPath="layer.shadowColor">
                                     <color key="value" red="0.0" green="0.0" blue="0.0" alpha="0.02" colorSpace="custom" customColorSpace="sRGB"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
                                     <size key="value" width="0.0" height="0.0"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
                                     <real key="value" value="10"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
@@ -307,16 +307,16 @@
                                 <constraint firstAttribute="bottom" secondItem="392-MO-IgA" secondAttribute="bottom" constant="10" id="wYB-Ti-2bl"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                     <real key="value" value="5"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                <userDefinedRuntimeAttribute type="color" keyPath="layer.shadowColor">
                                     <color key="value" red="0.0" green="0.0" blue="0.0" alpha="0.02" colorSpace="custom" customColorSpace="sRGB"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
                                     <size key="value" width="0.0" height="0.0"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
                                     <real key="value" value="10"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
