--- a/CloudEnjoy/CloudEnjoy/Modules/Alert/预约房间/LSChioceTechnicianItemController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Alert/预约房间/LSChioceTechnicianItemController.xib
@@ -1,22 +1,128 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSChioceTechnicianItemController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSChioceTechnicianItemController" customModule="CloudEnjoy" customModuleProvider="target">
             <connections>
+                <outlet property="clockContainView" destination="7GZ-2a-Ohi" id="DFK-r5-z7N"/>
+                <outlet property="levelContainView" destination="R8p-E6-R88" id="QW0-bv-0hu"/>
+                <outlet property="levelSelectedView" destination="BrT-es-N6d" id="312-jw-Zr6"/>
+                <outlet property="levelViewHeight" destination="1kg-HQ-b1r" id="yDJ-MD-LhU"/>
+                <outlet property="sexContainView" destination="ZEu-as-UQU" id="UEK-tu-BS9"/>
+                <outlet property="sexSelectedView" destination="Mrk-B8-fr3" id="gSi-l9-oSz"/>
+                <outlet property="tableView" destination="ve2-fm-WP4" id="TIb-2o-Kpl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="653"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qQZ-Xh-fNZ">
+                    <rect key="frame" x="15" y="0.0" width="363" height="240"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7GZ-2a-Ohi">
+                            <rect key="frame" x="0.0" y="0.0" width="363" height="80"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="上钟方式" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a8Q-m5-pqg">
+                                    <rect key="frame" x="3" y="15.000000000000002" width="56" height="19.666666666666671"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                                    <color key="textColor" red="0.21176470588235294" green="0.21176470588235294" blue="0.21176470588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="80" id="0zi-wx-Gfx"/>
+                                <constraint firstItem="a8Q-m5-pqg" firstAttribute="top" secondItem="7GZ-2a-Ohi" secondAttribute="top" constant="15" id="7H1-8a-FZ6"/>
+                                <constraint firstItem="a8Q-m5-pqg" firstAttribute="leading" secondItem="7GZ-2a-Ohi" secondAttribute="leading" constant="3" id="Kdw-nC-aQ0"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R8p-E6-R88">
+                            <rect key="frame" x="0.0" y="80" width="363" height="80"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技师等级" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Uh-4d-Rnm">
+                                    <rect key="frame" x="3" y="15.000000000000002" width="56" height="19.666666666666671"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                                    <color key="textColor" red="0.21176470589999999" green="0.21176470589999999" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="80" id="1kg-HQ-b1r"/>
+                                <constraint firstItem="2Uh-4d-Rnm" firstAttribute="top" secondItem="R8p-E6-R88" secondAttribute="top" constant="15" id="aW8-2P-gIK"/>
+                                <constraint firstItem="2Uh-4d-Rnm" firstAttribute="leading" secondItem="R8p-E6-R88" secondAttribute="leading" constant="3" id="wXL-C5-6bg"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZEu-as-UQU">
+                            <rect key="frame" x="0.0" y="160" width="363" height="80"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技师性别" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ef6-K8-Prw">
+                                    <rect key="frame" x="3" y="15.000000000000002" width="56" height="19.666666666666671"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                                    <color key="textColor" red="0.21176470589999999" green="0.21176470589999999" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="80" id="FJ1-ul-fQZ"/>
+                                <constraint firstItem="Ef6-K8-Prw" firstAttribute="leading" secondItem="ZEu-as-UQU" secondAttribute="leading" constant="3" id="KFW-qO-Udv"/>
+                                <constraint firstItem="Ef6-K8-Prw" firstAttribute="top" secondItem="ZEu-as-UQU" secondAttribute="top" constant="15" id="lje-tS-7Un"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrT-es-N6d" customClass="HWDownSelectedView">
+                    <rect key="frame" x="15" y="249" width="174" height="43"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="43" id="1iZ-fl-isU"/>
+                    </constraints>
+                </view>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mrk-B8-fr3" customClass="HWDownSelectedView">
+                    <rect key="frame" x="204" y="249" width="174" height="43"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="43" id="ghe-mJ-r5L"/>
+                    </constraints>
+                </view>
+                <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ve2-fm-WP4">
+                    <rect key="frame" x="15" y="299" width="363" height="354"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="ve2-fm-WP4" firstAttribute="top" secondItem="BrT-es-N6d" secondAttribute="bottom" constant="7" id="9Ga-9G-GbX"/>
+                <constraint firstItem="Mrk-B8-fr3" firstAttribute="centerY" secondItem="BrT-es-N6d" secondAttribute="centerY" id="9kP-ry-zp8"/>
+                <constraint firstAttribute="trailing" secondItem="qQZ-Xh-fNZ" secondAttribute="trailing" constant="15" id="BpK-oC-7M1"/>
+                <constraint firstAttribute="bottom" secondItem="ve2-fm-WP4" secondAttribute="bottom" id="Itu-Nk-m6L"/>
+                <constraint firstItem="BrT-es-N6d" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="OB0-la-8ii"/>
+                <constraint firstItem="BrT-es-N6d" firstAttribute="top" secondItem="qQZ-Xh-fNZ" secondAttribute="bottom" constant="9" id="Roe-l1-A8b"/>
+                <constraint firstAttribute="trailing" secondItem="ve2-fm-WP4" secondAttribute="trailing" constant="15" id="UbF-Wn-miE"/>
+                <constraint firstItem="qQZ-Xh-fNZ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="YkN-xS-B5c"/>
+                <constraint firstItem="Mrk-B8-fr3" firstAttribute="width" secondItem="BrT-es-N6d" secondAttribute="width" id="b10-Ib-cwC"/>
+                <constraint firstAttribute="trailing" secondItem="Mrk-B8-fr3" secondAttribute="trailing" constant="15" id="bhN-Rx-u3y"/>
+                <constraint firstItem="qQZ-Xh-fNZ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="cc5-Np-e6d"/>
+                <constraint firstItem="Mrk-B8-fr3" firstAttribute="leading" secondItem="BrT-es-N6d" secondAttribute="trailing" constant="15" id="e6q-LQ-Lqd"/>
+                <constraint firstItem="ve2-fm-WP4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="vYZ-Sr-Nzt"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="83" y="7"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
