--- a/CloudEnjoy/CloudEnjoy/Modules/Alert/预约房间/LSChoiceRoomItemController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Alert/预约房间/LSChoiceRoomItemController.xib
@@ -1,22 +1,99 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSChoiceRoomItemController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSChoiceRoomItemController" customModule="CloudEnjoy" customModuleProvider="target">
             <connections>
+                <outlet property="roomNumTextField" destination="McW-ek-HzF" id="95I-8M-Qk7"/>
+                <outlet property="roomTypeSelectedView" destination="NcI-cb-fps" id="D3a-pQ-Pd1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="350"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NcI-cb-fps" customClass="HWDownSelectedView">
+                    <rect key="frame" x="10" y="15" width="140" height="43"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="43" id="2u3-6E-MKQ"/>
+                        <constraint firstAttribute="width" constant="140" id="UeB-7R-918"/>
+                    </constraints>
+                </view>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xhB-ac-WZZ">
+                    <rect key="frame" x="156" y="15" width="227" height="43"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="搜索" translatesAutoresizingMaskIntoConstraints="NO" id="UZe-9q-xnS">
+                            <rect key="frame" x="14.999999999999998" y="13.33333333333333" width="16.333333333333329" height="16.666666666666671"/>
+                        </imageView>
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入房间号" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="McW-ek-HzF">
+                            <rect key="frame" x="36.333333333333343" y="10.999999999999998" width="139.66666666666666" height="21.333333333333329"/>
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijs-TW-5LW">
+                            <rect key="frame" x="181" y="0.0" width="46" height="43"/>
+                            <color key="backgroundColor" red="0.92549019610000005" green="0.99607843139999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="46" id="bK3-lj-EDA"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="搜索">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="searchAction:" destination="-1" eventType="touchUpInside" id="rLi-U5-3uV"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="Ijs-TW-5LW" firstAttribute="top" secondItem="xhB-ac-WZZ" secondAttribute="top" id="A4r-hd-Hj9"/>
+                        <constraint firstItem="Ijs-TW-5LW" firstAttribute="leading" secondItem="McW-ek-HzF" secondAttribute="trailing" constant="5" id="Etd-w7-LHo"/>
+                        <constraint firstAttribute="trailing" secondItem="Ijs-TW-5LW" secondAttribute="trailing" id="Fwa-h0-gqa"/>
+                        <constraint firstItem="McW-ek-HzF" firstAttribute="leading" secondItem="UZe-9q-xnS" secondAttribute="trailing" constant="5" id="S8W-sl-arU"/>
+                        <constraint firstAttribute="height" constant="43" id="ZJ1-xW-1gD"/>
+                        <constraint firstItem="UZe-9q-xnS" firstAttribute="centerY" secondItem="xhB-ac-WZZ" secondAttribute="centerY" id="gbQ-gL-fpK"/>
+                        <constraint firstItem="McW-ek-HzF" firstAttribute="centerY" secondItem="xhB-ac-WZZ" secondAttribute="centerY" id="oKI-Qz-IYz"/>
+                        <constraint firstItem="UZe-9q-xnS" firstAttribute="leading" secondItem="xhB-ac-WZZ" secondAttribute="leading" constant="15" id="pl0-0R-rr6"/>
+                        <constraint firstAttribute="bottom" secondItem="Ijs-TW-5LW" secondAttribute="bottom" id="yxx-qp-mQg"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds " value="YES"/>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="xhB-ac-WZZ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="15" id="6b6-Br-Ybn"/>
+                <constraint firstItem="xhB-ac-WZZ" firstAttribute="leading" secondItem="NcI-cb-fps" secondAttribute="trailing" constant="6" id="FIP-Z2-oo2"/>
+                <constraint firstItem="NcI-cb-fps" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="HPo-zb-bO4"/>
+                <constraint firstAttribute="trailing" secondItem="xhB-ac-WZZ" secondAttribute="trailing" constant="10" id="OMF-FJ-0e9"/>
+                <constraint firstItem="NcI-cb-fps" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="15" id="oLF-Up-deU"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="166" y="-99"/>
         </view>
     </objects>
+    <resources>
+        <image name="搜索" width="16.666666030883789" height="16.666666030883789"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
