对接长链接

--- a/CloudEnjoy/CloudEnjoy/Modules/Login/View/LSAccountLoginView.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Login/View/LSAccountLoginView.xib
@@ -42,7 +42,7 @@
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="员工工号" translatesAutoresizingMaskIntoConstraints="NO" id="Hrh-UM-aZ9">
                             <rect key="frame" x="15" y="13.333333333333327" width="15.666666666666664" height="16.333333333333329"/>
                         </imageView>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入商户号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hqi-nl-i1O">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入员工工号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hqi-nl-i1O">
                             <rect key="frame" x="50.666666666666671" y="11.666666666666671" width="219.33333333333331" height="20"/>
                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="13"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -64,7 +64,7 @@
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="密码" translatesAutoresizingMaskIntoConstraints="NO" id="2LT-Pg-LKn">
                             <rect key="frame" x="15" y="12.666666666666659" width="15" height="17.666666666666671"/>
                         </imageView>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入商户号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DVp-od-Qxa">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DVp-od-Qxa">
                             <rect key="frame" x="50" y="12" width="220" height="19"/>
                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="13"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
