--- a/CloudEnjoy/CloudEnjoy/Modules/Login/LSLoginViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Login/LSLoginViewController.xib
@@ -36,8 +36,8 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="聚客优闲-技师端" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jD-9B-W0r">
-                            <rect key="frame" x="19" y="104" width="168" height="33"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="聚客云休闲-技师端" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jD-9B-W0r">
+                            <rect key="frame" x="19" y="104" width="189.33333333333334" height="33"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="33" id="AO3-cL-vqn"/>
                             </constraints>
@@ -87,7 +87,7 @@
         </view>
     </objects>
     <resources>
-        <image name="技师端" width="374.5" height="234.5"/>
+        <image name="技师端" width="374.66665649414062" height="234.66667175292969"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
